[gd_scene load_steps=24 format=3 uid="uid://bww58mn12tq4o"]

[ext_resource type="Script" path="res://player/player.gd" id="1_3xu54"]
[ext_resource type="Material" uid="uid://b4506uqmkhp7q" path="res://player/player.tres" id="2_jv5kn"]
[ext_resource type="Texture2D" uid="uid://bov30svyjbifg" path="res://player/sprites/player1/clown_idle1.png" id="2_o02c7"]
[ext_resource type="Texture2D" uid="uid://bnlq0t1xkxcv3" path="res://player/sprites/player1/clown_idle2.png" id="3_5nv7x"]
[ext_resource type="Texture2D" uid="uid://bt3srmld0q2iw" path="res://player/sprites/player1/clown_idle3.png" id="3_el27u"]
[ext_resource type="Texture2D" uid="uid://m1sfnqym5jqy" path="res://player/sprites/player1/clown_idle6.png" id="5_8ecvj"]
[ext_resource type="Texture2D" uid="uid://c5s0m310sq7vy" path="res://player/sprites/player1/clown_idle4.png" id="5_rwadi"]
[ext_resource type="Texture2D" uid="uid://c8ex5l5fdgh58" path="res://player/sprites/player1/clown_idle5.png" id="6_g7upn"]
[ext_resource type="Texture2D" uid="uid://yyhufts0oboo" path="res://player/sprites/arm_left.png" id="9_luv6j"]
[ext_resource type="Texture2D" uid="uid://dsj7ouf1cm78f" path="res://player/sprites/forearm_left_open.png" id="10_auuk1"]
[ext_resource type="Texture2D" uid="uid://uq1rva4o01au" path="res://player/sprites/arm_right.png" id="11_s4d2w"]
[ext_resource type="Texture2D" uid="uid://heg4yye2mkti" path="res://player/sprites/forearm_left_close.png" id="11_w5bwy"]
[ext_resource type="Texture2D" uid="uid://gp78b16kfty2" path="res://player/sprites/forearm_right_open.png" id="12_4k0dn"]
[ext_resource type="Texture2D" uid="uid://ctyqb6t24gmco" path="res://player/sprites/forearm_right_close.png" id="14_fq18a"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qjv5d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o02c7")
}, {
"duration": 1.0,
"texture": ExtResource("6_g7upn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o02c7")
}, {
"duration": 1.0,
"texture": ExtResource("3_5nv7x")
}, {
"duration": 1.0,
"texture": ExtResource("3_el27u")
}, {
"duration": 1.0,
"texture": ExtResource("5_rwadi")
}, {
"duration": 1.0,
"texture": ExtResource("6_g7upn")
}, {
"duration": 1.0,
"texture": ExtResource("5_8ecvj")
}],
"loop": true,
"name": &"Move",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0s5gp"]
radius = 38.0
height = 182.0

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_xya8f"]
resource_local_to_scene = true
target_nodepath = NodePath("../Hands")
joint_one_bone_idx = 2
joint_one_bone2d_node = NodePath("Body/RightShoulder/RightArm")
joint_two_bone_idx = 3
joint_two_bone2d_node = NodePath("Body/RightShoulder/RightArm/RightForearm")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_03ii1"]
resource_local_to_scene = true
target_nodepath = NodePath("../Hands")
flip_bend_direction = true
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Body/LeftShoulder/LeftArm")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Body/LeftShoulder/LeftArm/LeftForearm")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_0d7f0"]
resource_local_to_scene = true
modification_count = 2
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_xya8f")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_03ii1")

[sub_resource type="CircleShape2D" id="CircleShape2D_tgd8w"]
radius = 15.0

[sub_resource type="CircleShape2D" id="CircleShape2D_3cfui"]

[sub_resource type="CircleShape2D" id="CircleShape2D_14lm2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_avige"]
radius = 32.1367
height = 156.774

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 4
collision_mask = 3
platform_floor_layers = 1
platform_wall_layers = 2
script = ExtResource("1_3xu54")
speed = 500.0
falling_gravity_multiplier = 1.0
cream_disappear_time = 0.5
creamed_weak_vibration = 1.0
creamed_strong_vibration = 1.0
creamed_vibration_duration = 0.1

[node name="BodyAnimSprite" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_jv5kn")
position = Vector2(2, -100)
sprite_frames = SubResource("SpriteFrames_qjv5d")
animation = &"Idle"
frame_progress = 0.927649

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -91)
shape = SubResource("CapsuleShape2D_0s5gp")

[node name="ArmsOrigin" type="Marker2D" parent="."]
position = Vector2(0, -128)

[node name="ArmsTarget" type="Marker2D" parent="ArmsOrigin"]

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2(-1, -64)
modification_stack = SubResource("SkeletonModificationStack2D_0d7f0")

[node name="Body" type="Bone2D" parent="Skeleton2D"]
position = Vector2(0, 65)
rotation = -1.5708
rest = Transform2D(-3.61999e-06, -1, 1, -3.61999e-06, 0, 65)

[node name="RightShoulder" type="Bone2D" parent="Skeleton2D/Body"]
position = Vector2(122, -0.999558)
rotation = 1.5708
rest = Transform2D(-3.61999e-06, 1, -1, -3.61999e-06, 129, 5.63877e-06)

[node name="RightArm" type="Bone2D" parent="Skeleton2D/Body/RightShoulder"]
position = Vector2(31, 0)
rest = Transform2D(1, 0, 0, 1, 64, 0)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Body/RightShoulder/RightArm"]
material = ExtResource("2_jv5kn")
position = Vector2(26, -0.249996)
rotation = -0.00981903
texture = ExtResource("9_luv6j")

[node name="RightForearm" type="Bone2D" parent="Skeleton2D/Body/RightShoulder/RightArm"]
position = Vector2(58.5, -0.249996)
rest = Transform2D(1, 0, 0, 1, 50, 0)

[node name="RightHandOpened" type="Sprite2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm"]
material = ExtResource("2_jv5kn")
position = Vector2(28.75, -1.25)
rotation = -3.14576
texture = ExtResource("10_auuk1")

[node name="RightHandClosed" type="Sprite2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm"]
visible = false
material = ExtResource("2_jv5kn")
position = Vector2(28.75, -1.25)
rotation = -3.14576
texture = ExtResource("11_w5bwy")

[node name="RightHand" type="Bone2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm"]
position = Vector2(48.75, 0)
rest = Transform2D(1, 0, 0, 1, 50, 0)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Area2D" type="Area2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm/RightHand"]
position = Vector2(4, 0)
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm/RightHand/Area2D"]
shape = SubResource("CircleShape2D_tgd8w")
debug_color = Color(0.67451, 0.305882, 1, 0.419608)

[node name="RightHandAttachment" type="CharacterBody2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm/RightHand/Area2D"]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/Body/RightShoulder/RightArm/RightForearm/RightHand/Area2D/RightHandAttachment"]
shape = SubResource("CircleShape2D_3cfui")

[node name="LeftShoulder" type="Bone2D" parent="Skeleton2D/Body"]
position = Vector2(117, -0.999167)
rotation = -1.5708
rest = Transform2D(-3.61999e-06, -1, 1, -3.61999e-06, 129, 5.63877e-06)

[node name="LeftArm" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder"]
position = Vector2(31, 0.000226545)
rest = Transform2D(1, 0, 0, 1, 64, 0)

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm"]
material = ExtResource("2_jv5kn")
position = Vector2(24.5004, 0.250172)
rotation = -4.76508
texture = ExtResource("11_s4d2w")

[node name="LeftForearm" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm"]
position = Vector2(54.5004, 0.25039)
rest = Transform2D(1, 0, 0, 1, 50, 0)

[node name="LeftHandOpened" type="Sprite2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm"]
material = ExtResource("2_jv5kn")
position = Vector2(26.25, 1.25019)
rotation = -1.56658
texture = ExtResource("12_4k0dn")

[node name="LeftHandClose" type="Sprite2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm"]
visible = false
material = ExtResource("2_jv5kn")
position = Vector2(26.25, 1.25019)
rotation = 3.14159
texture = ExtResource("14_fq18a")

[node name="LeftHand" type="Bone2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm"]
position = Vector2(41.25, 0.000298878)
rest = Transform2D(1, 0, 0, 1, 50, 1.20005e-05)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="Area2D" type="Area2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm/LeftHand"]
position = Vector2(4, 0)
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm/LeftHand/Area2D"]
shape = SubResource("CircleShape2D_tgd8w")
debug_color = Color(0.67451, 0.305882, 1, 0.419608)

[node name="LeftHandAttachment" type="CharacterBody2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm/LeftHand/Area2D"]
position = Vector2(7.62939e-06, -1)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skeleton2D/Body/LeftShoulder/LeftArm/LeftForearm/LeftHand/Area2D/LeftHandAttachment"]
position = Vector2(2.75042, 0.000229721)
shape = SubResource("CircleShape2D_3cfui")

[node name="Hands" type="RigidBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hands"]
shape = SubResource("CircleShape2D_14lm2")
debug_color = Color(0.992157, 0, 0.258824, 0.419608)

[node name="PieDetector" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PieDetector"]
position = Vector2(-3, -102)
rotation = 0.0785398
shape = SubResource("CapsuleShape2D_avige")
debug_color = Color(0.784314, 0.431373, 0, 0.419608)

[connection signal="body_entered" from="PieDetector" to="." method="_on_pie_detector_body_entered"]
